kanc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_arguments/variant.k
type Empty {}

type Bar {
    .b(T: Type): Bar,
}

let foo = Bar.b(Empty, Empty);
